2012-06-01 Borut Razem <borut.razem AT siol.net>

	* index.php: updated / reorganised for sdcc 3.2.0

2012-05-18 Borut Razem <borut.razem AT siol.net>

	* left_menu.inc: link to Regression Tests re-included
	* regtests.php: fixed build number update, table sort & zebra style
	* images/asc.gif, images/bg.gif, images/desc.gif,
	  scripts/jquery.tablesorter.js, styles/tablesorter.css:
	  included tablesorter plugin

2012-05-15 Borut Razem <borut.razem AT siol.net>

	* sdcc_sw.ini: added for regtests db rw access
	* dbg.php: new, implemented Dbg debugging class
	* update_regtests_db.php: fixed, use Dbg class

2012-03-12 Borut Razem <borut.razem AT siol.net>

	* left_menu.inc: link to html version of sdccman removed;
	  Removed links to "Test Suite" and "CDB Format" documents,
	  now available on sdcc wiki:
	  http://sourceforge.net/apps/trac/sdcc/wiki/Proposed%20Test%20Suite%20Design
	  http://sourceforge.net/apps/trac/sdcc/wiki/CDB%20File%20Format
	* sdcctarbin.html, sdcc-install-nt.html, flatmode.txt,
	  cygwin_help.html: removed from svn, moved to sdcc wiki

2012-03-11 Borut Razem <borut.razem AT siol.net>

	* index.php, snap_header.php, links.php: removed Unicode BOM
	* links.php: fixed html errors

2012-03-09 Borut Razem <borut.razem AT siol.net>

	* index.php:
	  added info about included code from gcc test suite
	* left_menu.inc: link to Regression Tests temporary excluded
	  since regression tests analysis is not functional

2012-03-02 Borut Razem <borut.razem AT siol.net>

	* index.php: updated chapter "Who is SDCC?", ...

2012-03-01 Borut Razem <borut.razem AT siol.net>

	* links.php: "Links - LCD Stuff" is back, thanks to Dave Helton
	  who provided the backup copy of lcd directory

2012-02-28 Borut Razem <borut.razem AT siol.net>

	* links.php: applied requests from Wbdocs tracker:
	  #3486131: Broken links,
	  #3407481: Links - General,
	  #2986975: New Link for SDCC,
	  #2298395: KTechLab,
	  #1807915: KiCAD link
