@@ -1,3 +1,7 @@
+2012-06-17 Borut Razem <borut.razem AT siol.net>
+
+	* index.php: added News - sdcc 3.2.0 RC1
+
 2012-06-01 Borut Razem <borut.razem AT siol.net>
 
 	* index.php: updated / reorganised for sdcc 3.2.0
